--- a/emacs-init.org
+++ b/emacs-init.org
@@ -859,6 +859,15 @@ Miscellaneous stiff that should probably be better sorted.
 Some configuration specific to using Emacs on macOS.
 
 #+begin_src emacs-lisp :results silent
+  (defun ddavis/delete-frame-or-window ()
+    "if we have multiple frames delete the current one, if only one
+  delete the window; this is really just for binding Command+w to
+  behave similar to other macOS applications."
+    (interactive)
+    (if (< (count-windows) 2)
+        (delete-frame)
+      (delete-window)))
+
   (when ddavis-v-is-mac
     (use-package exec-path-from-shell
       :ensure t
@@ -869,13 +878,9 @@ Some configuration specific to using Emacs on macOS.
     (when (display-graphic-p)
       (setq-default ns-alternate-modifier 'meta)
       (setq-default mac-option-modifier 'meta)
-      (setq-default ns-right-alternate-modifier nil))
-
-    (when (display-graphic-p)
+      (setq-default ns-right-alternate-modifier nil)
       (setq-default ns-command-modifier 'super)
-      (setq-default mac-command-modifier 'super))
-
-    (when (display-graphic-p)
+      (setq-default mac-command-modifier 'super)
       (setq-default ns-function-modifier 'hyper)
       (setq-default mac-function-modifier 'hyper))
 
@@ -895,11 +900,7 @@ Some configuration specific to using Emacs on macOS.
     (global-set-key (kbd "s-b") 'helm-buffers-list)
     (global-set-key (kbd "s-g") 'magit-status)
     (global-set-key (kbd "s-t") 'neotree-toggle)
-    (global-set-key (kbd "s-w") (lambda ()
-                                  (interactive)
-                                  (if (< (count-windows) 2)
-                                      (delete-frame)
-                                    (delete-window))))
+    (global-set-key (kbd "s-w") 'ddavis/delete-frame-or-window)
 
     (setq browse-url-browser-function 'browse-url-default-macosx-browser))
 #+end_src
