--- a/emacs-init.org
+++ b/emacs-init.org
@@ -237,6 +237,12 @@
             (set-window-buffer (next-window) next-win-buffer)
             (select-window first-win)
             (if this-win-2nd (other-window 1))))))
+
+  (defun ddavis/cleanup-tramp ()
+    (interactive)
+    (tramp-cleanup-all-buffers)
+    (tramp-cleanup-all-connections)
+    (find-file "~/."))
 #+end_src
 
 * org
@@ -762,12 +768,6 @@ Miscellaneous stiff that should probably be better sorted.
   (use-package ace-window
     :ensure t
     :bind ("M-o" . 'ace-window))
-
-  (defun ddavis/cleanup-tramp ()
-    (interactive)
-    (tramp-cleanup-all-buffers)
-    (tramp-cleanup-all-connections)
-    (setq default-directory "~/."))
 #+end_src
 
 * elfeed
